Add placeholder button/images to MovieDetailActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">PopularMovies</string>
     <string name="sortByMostPopular">Sort Most Popular</string>
     <string name="sortByTopRated">Sort Top Rated</string>
+    <string name="showFavourites">Load Favourites</string>
+    <string name="reviews">Reviews</string>
+    <string name="content_desc_trailer">Trailer</string>
 </resources>
